[package]
name = "tempus"
version = "0.1.0"
authors = ["Houston Perrett <hp@houstonp.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "date_constructor_benchmark"
harness = false
